fix spacing

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     padding: 0;
     --light-yellow: #FFF3B4;
     --dusty-pink: #E7B7B9;
-    --dark-gray: #282223;
+    --dark-gray: #202327;
     scroll-behavior: smooth;
     box-sizing: border-box;
 }
